--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
 }
 .parallax {
   /* background-image: url(../images/StMarkBldg4.jpg); */
-  height: 68vh;
+  height: 100vh;
   background-attachment: fixed;
   background-position: center; 
   background-repeat: no-repeat;
@@ -40,7 +40,7 @@ body {
   background: rgba(0, 0, 0, 0.25);
   position: relative;
   overflow: hidden;
-  min-height: 68vh;
+  min-height: 100vh;
 }
 /* .video-bg {
   position: absolute;
@@ -50,9 +50,13 @@ body {
   min-width: 100%;
   min-height: 100%;
 } */
+
+.containParallax h1{
+  margin-top: 25vh;
+}
 #intro h1 {
   /* color: #FDED2A; */
-  color: #183BF0;
+  color: #396AA2;
 }
 #intro h3 {
   /* color: #1258DC; */
@@ -70,7 +74,8 @@ body {
 #intro {
   /* background-color:#D9E5F2; */
   /* background-color: #EA202C; */
-  background-color: #F1CF0A;
+  /* background-color: #F1CF0A; */
+  background-color: #f0ead6;
   /* height: 68vh; */
   /* background-size: cover; */
   background-repeat: no-repeat;
@@ -90,8 +95,8 @@ body {
   left:0; */
 }
 .staffDescription {
-  /* background-color:#D9E5F2; */
-  height: 300px;
+  background-color:#f0ead6;
+  height: 100vh;
   /* background-size: cover; */
   background-repeat: no-repeat;
   background-position: center; 
@@ -100,7 +105,7 @@ body {
   color: #2E1017;
   position: relative;
   overflow: hidden;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   /* top:0;
   bottom:0;
   right:0;
@@ -108,6 +113,14 @@ body {
 }
 .staffPhotoDiv {
   justify-content: center;
+}
+.staff-pic{
+  border-radius: 10px;
+  height: auto;
+  width: 100%;
+  /* max-width: 622px; */
+  box-shadow: 0 10px 20px;
+  margin: 5px;
 }
 
 .role-description {
