--- a/views/index.pug
+++ b/views/index.pug
@@ -27,18 +27,16 @@ block content
     #activitiesTable
       if {events}
         h1(strong) Weekly Events
-        h3 Sunday Service at 11:00am
-        h4 521 Obendorfer Road Norfolk, VA
+        h3 Sunday Worship Service at 11:15am
         h5 
           a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook Live 
-          span or Conference Call (425) 436-6368  Access Code 284469
+          span and Conference Call (425) 436-6368  Access Code 284 469
         br
         br  
-        h3 Wednesday Bible Study at 7:00pm
-        h4 521 Obendorfer Road Norfolk, VA
+        h3 Bible Study - Each Wednesday at 7:00pm
         h5 
-          a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook Live 
-          span or Conference Call (425) 436-6368  Access Code 284469
+          a(href="#") Zoom 
+          span and Conference Call (425) 436-6368  Access Code 284469
         br
         br
         h1(strong) Special Events
