--- a/views/ministries.pug
+++ b/views/ministries.pug
@@ -3,14 +3,23 @@ extends layout
 block content
       .row.text-center
         .col-md-12
-          h1 Mission Statement
+          h1 Ministries
       .row
-        .col-md-4.offset-4
-            h3 The mission of St. Mark United Church of Christ is to make disciples of Jesus Christ.
-            br
-            h3  We will achieve this object by helping people to make the Christian faith meaningful in their lives, building and participating in the Christian community and nurturing  Christian hope for themselves and all other people.  
-            br
-            h3 We are dependent upon the Holy Spirit while engaged on this mission and carrying out the responsibility charged to this branch of Zion.
+        .col-md-4
+           ul#ministriesList
+            li Trustees 
+            li Deacons 
+            li Christian Education 
+        .col-md-4
+           ul#ministriesList
+            li Seniors 
+            li Youth 
+            li Music  
+        .col-md-4
+           ul#ministriesList
+            li Ushers  
+            li Greeters  
+            li Hart to Hart 
 
                               
       script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
