Added background color, gradient, box-shadow to pastor, ministries, and mission views.

--- a/views/pastor.pug
+++ b/views/pastor.pug
@@ -7,7 +7,7 @@ block content
   //-     h1= title
       
   //- Consider iterating the staff rows from a JSON object  
-  .row.staffDescription
+  .row#contentContainer.staffDescription
     //- .col-md-3.offset-md-2.staffPhotoDiv
     //-   br
     //-   img.staff-pic(src="/images/pastor.webp")
