--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,7 +95,7 @@ body {
   left:0; */
 }
 .staffDescription {
-  background-color:#f0ead6;
+  /* background-color:#f0ead6; */
   height: 100vh;
   /* background-size: cover; */
   background-repeat: no-repeat;
@@ -117,14 +117,21 @@ body {
 .staff-pic{
   border-radius: 10px;
   height: auto;
-  width: 100%;
+  width: 33%;
   /* max-width: 622px; */
   box-shadow: 0 10px 20px;
   margin: 5px;
+  float: left;
 }
 
 .role-description {
   justify-content: left;
+  background-color: #ffffff;
+  /* border-style: solid;
+  border-color: #2E1017; */
+  border-radius: 10px;
+  margin: 15% auto;
+  box-shadow: 0px 10px 20px;
 }
 
 .staffTitle {
@@ -163,10 +170,34 @@ a {
   right:0;
   left:0; */
 }
-#activities{
+#activities {
   text-align: center;
   padding: 10px;
   
+}
+
+#contentContainer {
+  /* background-color: #f0ead6; */
+  background-image: radial-gradient(#ffffff, #f0ead6);
+}
+
+#missionText {
+  background-color: #ffffff;
+  /* border-style: solid;
+  border-color: #2E1017; */
+  border-radius: 10px;
+  margin: 15% auto;
+  box-shadow: 0px 10px 20px;
+
+}
+#ministriesText {
+  background-color: #ffffff;
+  /* border-style: solid;
+  border-color: #2E1017; */
+  border-radius: 10px;
+  margin: 15% auto;
+  box-shadow: 0px 10px 20px;
+
 }
 
 #ministriesList li{
