--- a/views/ministries.pug
+++ b/views/ministries.pug
@@ -1,25 +1,27 @@
 extends layout
 
 block content
-      .row.text-center
-        .col-md-12
-          h1 Ministries
-      .row
-        .col-md-4
-           ul#ministriesList
-            li Trustees 
-            li Deacons 
-            li Christian Education 
-        .col-md-4
-           ul#ministriesList
-            li Seniors 
-            li Youth 
-            li Music  
-        .col-md-4
-           ul#ministriesList
-            li Ushers  
-            li Greeters  
-            li Hart to Hart 
+      .row#contentContainer
+          .col-md-6.offset-3#ministriesText
+            .row.text-center
+              .col-md-12
+                h1 Ministries
+            .row
+              .col-md-4
+                ul#ministriesList
+                  li Trustees 
+                  li Deacons 
+                  li Christian Education 
+              .col-md-4
+                ul#ministriesList
+                  li Seniors 
+                  li Youth 
+                  li Music  
+              .col-md-4
+                ul#ministriesList
+                  li Ushers  
+                  li Greeters  
+                  li Hart to Hart 
 
                               
       script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
