--- a/views/mission.pug
+++ b/views/mission.pug
@@ -1,16 +1,14 @@
 extends layout
 
 block content
-      .row.text-center
-        .col-md-12
+      .row#contentContainer.text-center
+        .col-md-6.offset-3#missionText
           h1 Mission Statement
-      .row
-        .col-md-4.offset-4
-            h3 The mission of St. Mark United Church of Christ is to make disciples of Jesus Christ.
-            br
-            h3  We will achieve this object by helping people to make the Christian faith meaningful in their lives, building and participating in the Christian community and nurturing  Christian hope for themselves and all other people.  
-            br
-            h3 We are dependent upon the Holy Spirit while engaged on this mission and carrying out the responsibility charged to this branch of Zion.
+          h3 The mission of St. Mark United Church of Christ is to make disciples of Jesus Christ.
+          br
+          h3  We will achieve this object by helping people to make the Christian faith meaningful in their lives, building and participating in the Christian community and nurturing  Christian hope for themselves and all other people.  
+          br
+          h3 We are dependent upon the Holy Spirit while engaged on this mission and carrying out the responsibility charged to this branch of Zion.
 
                               
       script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
