--- a/views/ministries.pug
+++ b/views/ministries.pug
@@ -3,9 +3,9 @@ extends layout
 block content
       .row#contentContainer
           .col-md-6.offset-3#ministriesText
-            .row.text-center
+            .row
               .col-md-12
-                h1 Ministries
+                h1.text-center Ministries
             .row
               .col-md-4
                 ul#ministriesList
