--- a/views/mission.pug
+++ b/views/mission.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-      .row#contentContainer.text-center
-        .col-md-6.offset-3#missionText
+      .row#contentContainer
+        .col-md-6.offset-3.text-center#missionText
           h1 Mission Statement
           h3 The mission of St. Mark United Church of Christ is to make disciples of Jesus Christ.
           br
