Revised layout of Intro Div on Homepage.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -144,7 +144,7 @@ body {
   border: #396AA2 solid;
   border-width: 1em;
   border-radius: 10px;
-  margin: 15%;
+  margin: 0 5%;
   box-shadow:  10px 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   height: auto;
   width: 100%;
