--- a/views/index.pug
+++ b/views/index.pug
@@ -17,28 +17,28 @@ block content
         h3 No Matter Who You Are Or Where You Are On Life's Journey, You're Welcome HERE!!!
         br
     .row
-      #imgDiv.col-md-4.offset-1
-        img.intro-pic(src="/images/uccLogo.jpg")
-      #introTextFrame.col-md-4.offset-1
+      //- #imgDiv.col-md-4.offset-1
+      #introTextFrame.col-md-6.offset-3
         div#introText
+          img.intro-pic(src="/images/uccLogo.jpg")
           p Welcome!  St. Mark United Church of Christ extends an extravagant welcome to all people!  It is our desire to offer the love of Christ and the fellowship of Christ’s people to souls in need of sanctuary — a place of safety and care.  We hope that you will join us during this time of pandemic for our virtual worship service on Facebook live.  Join us each Sunday morning at 11:15am at St. Mark UCC Berkley Norfolk, VA.  We look forward to meeting you there!
      
   #activities
+    h1(strong) Weekly Events
+    h3 Sunday Worship Service at 11:15am
+    h5 
+      a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook Live 
+      span and Conference Call (425) 436-6368  Access Code 284 469
+    br
+    br  
+    h3 Bible Study - Each Wednesday at 7:00pm
+    h5 
+      a(href="#") Zoom 
+      span and Conference Call (425) 436-6368  Access Code 284469
+    br
+    br
     #activitiesTable
       if {events}
-        h1(strong) Weekly Events
-        h3 Sunday Worship Service at 11:15am
-        h5 
-          a(href="https://www.facebook.com/St-Mark-UCC-Berkley-Norfolk-VA-106160771087217/?epa=SEARCH_BOX") Facebook Live 
-          span and Conference Call (425) 436-6368  Access Code 284 469
-        br
-        br  
-        h3 Bible Study - Each Wednesday at 7:00pm
-        h5 
-          a(href="#") Zoom 
-          span and Conference Call (425) 436-6368  Access Code 284469
-        br
-        br
         h1(strong) Special Events
          
         //- table
