--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -1,23 +1,24 @@
 extends layout
 
 block content
-      #gallery
-        if {galleries}
-          h2 Image Gallery
-          each gallery in galleries
-            ul(style="list-style-type: none; display: inline-block")
-               li 
-                 .row
-                    .col-sm-12
-                      a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) data-lightbox="gallery-set")
-                        img(src=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) height="250" width="250" style="border-radius:10px")
+      #contentContainer
+        #gallery
+          if {galleries}
+            h2 Image Gallery
+            each gallery in galleries
+              ul(style="list-style-type: none; display: inline-block")
+                li 
+                  .row
+                      .col-sm-12
+                        a(href=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) data-lightbox="gallery-set")
+                          img(src=(`https://stmarkfiles7.s3.amazonaws.com/${(gallery.imageURL)}`) height="250" width="250" style="border-radius:10px")
 
-                      //- Add button to allow registered users to delete images
-                      if currentUser
-                        .row
-                          .col-sm-12   
-                            button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
-                              i.fas.fa-trash-alt 
+                        //- Add button to allow registered users to delete images
+                        if currentUser
+                          .row
+                            .col-sm-12   
+                              button#imageDelete.btn.btn-danger(type="button" value=(gallery._id) attr=(gallery.imageURL)) 
+                                i.fas.fa-trash-alt 
                               
       script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
