--- a/views/imageUpload.pug
+++ b/views/imageUpload.pug
@@ -1,18 +1,19 @@
 extends layout
 
 block content
-    #uploadForm
-        br
-        .col-md-6.offset-3
-            form(action="api/upload" method="post" enctype="multipart/form-data")
-                .custom-file.mb-3  
-                    input#newImages.custom-file-input(type="file" name="image" multiple)
-                    label.custom-file-label(for="file")
-                    br
-                    .row
-                        #previewGallery(style="opacity: 0").col-sm-12
-                    .row    
-                        #imageButton.col-sm-12
+    #contentContainer
+        #uploadForm
+            br
+            .col-md-6.offset-3
+                form(action="api/upload" method="post" enctype="multipart/form-data")
+                    .custom-file.mb-3  
+                        input#newImages.custom-file-input(type="file" name="image" multiple)
+                        label.custom-file-label(for="file")
+                        br
+                        .row
+                            #previewGallery(style="opacity: 0").col-sm-12
+                        .row    
+                            #imageButton.col-sm-12
     script(src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
