Edited title meta tag on home page.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(http-equiv='x-ua-compatible', content='ie=edge')
     title= title
+    meta(name='description', content="Welcome! St. Mark United Church of Christ extends an extravagant welcome to all people! It is our desire to offer the love of Christ and the fellowship of Christ’s people to souls in need of sanctuary — a place of safety and care.")
     link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
     //-lightbox2 css file for image gallery
     link(rel='stylesheet', href='/stylesheets/lightbox.min.css')
