Added history page link to navbar

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -16,6 +16,8 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
       li.nav-item
         a.nav-link(href='/ministries') Ministries
       li.nav-item
+        a.nav-link(href='/history') History
+      li.nav-item
         a.nav-link(href='/gallery') Gallery
       if !currentUser
           li.nav-item
