--- a/views/ministries.pug
+++ b/views/ministries.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-      .row#contentContainer
+      .container-fluid#ministriesContainer
           .col-md-6.offset-3#ministriesText
             .row
               .col-md-12
