--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -19,6 +19,8 @@ nav.navbar.navbar-expand-lg(style='background-color: #D9E5F2')
         a.nav-link(href='/history') History
       li.nav-item
         a.nav-link(href='/gallery') Gallery
+      li.nav-item
+        a.nav-link(href='/give') Give
       if !currentUser
           li.nav-item
             a.nav-link(href='/register') Register
