--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,7 +184,7 @@ a {
 #contentContainer {
   /* background-color: #f0ead6; */
   /* background: linear-gradient(90deg,#ffffff, #f0ead6, #00B7FF), url("/images/monarch-butterfly-seeds.jpg") no-repeat; */
-  background: linear-gradient(90deg,#ffffff, #7ab7d3, #b35ac3), url("/images/NewChurchImg.jpg");
+  background: linear-gradient(90deg,#ffffff, #7ab7d3, #b35ac3), url("/images/NewChurchImg.png");
   background-blend-mode: multiply;
   background-size: cover;
   height: 100vh;
@@ -195,7 +195,7 @@ a {
 #pastorContainer {
   /* background-color: #f0ead6; */
   /* background: linear-gradient(90deg,#ffffff, #f0ead6, #00B7FF), url("/images/monarch-butterfly-seeds.jpg") no-repeat; */
-  background: url("/images/shutterstock_1668394099.jpg");
+  background: url("/images/butterfly_lightBlue_compressed.png");
   background-blend-mode: multiply;
   background-size: 100% 100%;
   height: 100vh;
@@ -205,7 +205,7 @@ a {
 #missionContainer {
   /* background-color: #f0ead6; */
   /* background: linear-gradient(90deg,#ffffff, #f0ead6, #00B7FF), url("/images/monarch-butterfly-seeds.jpg") no-repeat; */
-  background:  url("/images/shutterstock_757721221.jpg");
+  background:  url("/images/heavenly_steps_compressed.png");
   background-blend-mode: multiply;
   background-size: 100% 100%;
   height: 100vh;
@@ -227,12 +227,13 @@ a {
 #ministriesContainer {
   /* background-color: #f0ead6; */
   /* background: linear-gradient(90deg,#ffffff, #f0ead6, #00B7FF), url("/images/monarch-butterfly-seeds.jpg") no-repeat; */
-  background:  url("/images/shutterstock_177070154.jpg");
+  background:  url("/images/bible_two_compressed.png");
   background-blend-mode: multiply;
   background-size: 100% 100%;
   height: 100vh;
   overflow: auto;
   padding: 20px 50px;
+  color: #ffffff;
 }
 
 #ministriesText {
@@ -240,13 +241,16 @@ a {
   opacity: 0.8; */
   /* border-style: solid;
   border-color: #2E1017; */
-  color: #ffffff;
+  /* color: #ffffff; */
   /* border-radius: 10px; */
   margin: 10% auto;
   /* box-shadow: 0px 10px 20px; */
 
 }
 
+#ministriesList {
+  padding: 0;
+}
 #ministriesList li{
   /* display: inline; */
   list-style-type: none;
@@ -259,6 +263,11 @@ a {
  justify-content: center;
 }
 
+#gallery ul {
+  /* padding: 0; */
+  margin: 10 auto;
+  text-align: center;
+}
 table{
   width: 50%;
   margin: 50px auto;
@@ -297,6 +306,10 @@ th {
     justify-content: center;
     
   }
+  
+  #introTextFrame {
+    margin: 0 20;
+  }
 
   
   #introText {
@@ -330,4 +343,10 @@ th {
     float: right;
     display: block;
   }
+
+  #gallery ul, h2 {
+    padding: 0;
+    text-align: center;
+  }
+
 }
