Edited layout of ministries view

--- a/views/ministries.pug
+++ b/views/ministries.pug
@@ -2,11 +2,10 @@ extends layout
 
 block content
       .container-fluid#ministriesContainer
-          .col-md-6.offset-3#ministriesText
             .row
               .col-md-12
                 h1.text-center Ministries
-            .row
+            .row#ministriesText
               .col-md-4
                 ul#ministriesList
                   li Trustees 
